kubernetes/networking/nginx-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: haoyuanj-mesh.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blockchain-service
                port:
                  number: 8080
